<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logger</string>
    <string name="title_activity_list_log_entries">Logs</string>
    <string name="title_activity_add_log_entry">Add new log</string>
    <string name="title_activity_log_details_activity">Log details</string>
    <string name="action_settings">Settings</string>
    <string name="topic">Topic</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="logNewEntry">Log it!</string>
    <string name="item">Item</string>
    <string name="details">Details</string>
    <string name="quantity">Quantity</string>
    <string name="time">Time</string>
    <string name="logEntryAdded">Loggered!</string>
    <string name="spinnerPrompt">Topic</string>
    <string name="initialQty">1</string>
    <string name="menu_export_logs">Export logs...</string>
    <string name="menu_import_logs">Import logs...</string>
    <string name="cancelLogEntry">Cancel</string>
    <string name="editLog">Edit</string>
    <string name="deleteLog">Delete</string>
    <string name="menu_add_topic">Add topic</string>
    <string name="menu_edit_topic">Edit Topic</string>
    <string name="menu_edit_item">Edit Item</string>
    <string name="menu_add_item">Add Item</string>
    <string name="addPicture">Add picture</string>
    <string name="log_edit_type">LogEditType</string>
    <string name="editLogDetails">Edit Log Details</string>
    <string name="date_format">dd MMM yyyy</string>
    <string name="time_format">HH:mm</string>
    <string name="date_time_format">dd MMM yyyyHH:mm</string>
</resources>